[package]
name = "candle-layer-norm"
version = "0.0.1"
edition = "2021"

description = "Layer Norm layer for the candle ML framework."

[dependencies]
candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.4.2", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
